--- a/package.json
+++ b/package.json
@@ -10,11 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-do-expressions": "^7.22.5",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
+    "crypto-js": "^3.3.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-safe-area-context": "^4.7.3",
+    "react-native-screens": "^3.27.0",
+    "react-redux": "^8.1.3",
+    "reactotron-react-native": "^5.0.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
@@ -23,10 +40,13 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
+    "prettier": "^3.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
