--- a/package.json
+++ b/package.json
@@ -12,14 +12,28 @@
   "dependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.22.5",
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@react-navigation/stack": "^6.3.20",
     "crypto-js": "^3.3.0",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-google-maps-directions": "^2.1.1",
+    "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.8.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-permissions": "^3.10.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.27.0",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-template-typescript": "^6.12.11",
+    "react-native-webview": "11.25.0",
     "react-redux": "^8.1.3",
     "reactotron-react-native": "^5.0.3",
     "reactotron-redux-saga": "^4.2.3",
