--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
     "crypto-js": "^3.3.0",
     "numeral": "^2.0.6",
     "react": "18.2.0",
