--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.22.5",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
@@ -25,6 +25,7 @@
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-background-fetch": "^4.2.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-google-maps-directions": "^2.1.1",
