--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "crypto-js": "^3.3.0",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "numeral": "^2.0.6",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-background-fetch": "^4.2.1",
