--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.8.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-permissions": "^3.10.1",
     "react-native-responsive-screen": "^1.4.2",
